# common_disease_model

./: pyproject.toml  train_diabetes.py  train_malaria.py  train_typhoid.py
app/: main.py
app/api/routes/: predict.py
app/constants/: disease_type.py  gender.py  messages.py
app/core/: config.py  exceptions.py
app/schemas/: symptoms.py
app/utils/: data_preprocessors.py  helper.py  model_architectures.py  model_loader.py
dataset/: malaria_data.csv  typhoid_data.csv
models/: diabetes_model.pkl  typhoid_model.pkl
