[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "scipy==1.16.3",
    "joblib==1.5.2",
    "xgboost==3.1.1",
    "imbalanced-learn==0.14.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pydantic-settings>=2.12.0",
]
